07-创建接口文档

--- a/admin/login.html
+++ b/admin/login.html
@@ -16,6 +16,7 @@
   <!-- 引入bootstrap的js文件 -->
   <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
   <!-- 引入login文件 -->
+  <script src="./js/http.js"></script>
   <script src="./js/login.js"></script>
 </head>
 
